--- a/transmonitor/.eslintrc
+++ b/transmonitor/.eslintrc
@@ -1,7 +1,7 @@
 {
   "rules": {
     "no-unused-vars": "off",
-    "prettier/prettier": 2,
+    "prettier/prettier": "off",
     "no-dupe-else-if": "off",
     "prefer-spread": "off",
     "no-unsafe-optional-chaining": "off",
